// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test.cts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await(1);

================================================================================
`;

exports[`test.mts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;

exports[`test.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;

exports[`test.tsx format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
await(1);

=====================================output=====================================
await 1;

================================================================================
`;
